--- a/.github/workflows/publish-quarto.yml
+++ b/.github/workflows/publish-quarto.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build-deploy:
+    if: "contains(github.event.head_commit.message, 'CI')"
     runs-on: ubuntu-latest
     permissions:
       contents: write
